change api get message with user to clear api route, update swagger
